--- a/_data/latest_news.yml
+++ b/_data/latest_news.yml
@@ -1,3 +1,6 @@
+- text: '<a href="https://arxiv.org/abs/2206.07307">VCT</a> was accepted at NeurIPS 2022.'
+  date: "Nov 2022"
+
 - text: 'I gave  <a href="https://www.youtube.com/watch?v=6OTB5Og8oe4&list=PLPtQK8rJZ9HxUE1O95sF5ZKFM6Bt_QLSR&index=5">a talk</a> in the <a href="https://fvc-workshop.github.io/">1st Future Video Conferencing Workshop</a> at CVPR 2021.'
   date: "Jun 2021"
   
